# tiny-yamux

./: .gitignore  CMakeLists.txt  LICENSE  README.md  go.mod
docs/: PROTOCOL.md
examples/: simple_demo.c
include/: yamux.h  yamux_config.h
src/: yamux_buffer.c  yamux_defs.h  yamux_frame.c  yamux_handlers.c  yamux_internal.h  yamux_port.c  yamux_session.c  yamux_session_utils.c  yamux_stream.c  yamux_stream_ext.c  yamux_stream_utils.c  yamux_wrapper.h
tests/: CMakeLists.txt
tests/c_tests/: CMakeLists.txt  linux_socket_adapter.h  mock_io.h  performance_test.c  test_buffer.c  test_common.h  test_concurrent_streams.c  test_error_handling.c  test_flow_control.c  test_frame.c  test_frame_decoding.c  test_main.c  test_main.h  test_session.c  test_stream_io.c  test_stream_lifecycle.c  test_yamux_port.c
tests/cgo_tests/: .gitignore  go.mod  yamux_test.go
tests/cgo_tests/src/: cgo_compatibility_runner.go  cgo_helpers.c  cgo_helpers.h  dummy.c
